; ModuleID = '/home/carl/AnghaBench/linux/drivers/vhost/extr_net.c_vhost_net_chr_read_iter.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/vhost/extr_net.c_vhost_net_chr_read_iter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kiocb = type { %struct.file* }
%struct.file = type { i32, %struct.vhost_net* }
%struct.vhost_net = type { %struct.vhost_dev }
%struct.vhost_dev = type { i32 }
%struct.iov_iter = type { i32 }

@O_NONBLOCK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kiocb*, %struct.iov_iter*)* @vhost_net_chr_read_iter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vhost_net_chr_read_iter(%struct.kiocb* %0, %struct.iov_iter* %1) #0 {
  %3 = alloca %struct.kiocb*, align 8
  %4 = alloca %struct.iov_iter*, align 8
  %5 = alloca %struct.file*, align 8
  %6 = alloca %struct.vhost_net*, align 8
  %7 = alloca %struct.vhost_dev*, align 8
  %8 = alloca i32, align 4
  store %struct.kiocb* %0, %struct.kiocb** %3, align 8
  store %struct.iov_iter* %1, %struct.iov_iter** %4, align 8
  %9 = load %struct.kiocb*, %struct.kiocb** %3, align 8
  %10 = getelementptr inbounds %struct.kiocb, %struct.kiocb* %9, i32 0, i32 0
  %11 = load %struct.file*, %struct.file** %10, align 8
  store %struct.file* %11, %struct.file** %5, align 8
  %12 = load %struct.file*, %struct.file** %5, align 8
  %13 = getelementptr inbounds %struct.file, %struct.file* %12, i32 0, i32 1
  %14 = load %struct.vhost_net*, %struct.vhost_net** %13, align 8
  store %struct.vhost_net* %14, %struct.vhost_net** %6, align 8
  %15 = load %struct.vhost_net*, %struct.vhost_net** %6, align 8
  %16 = getelementptr inbounds %struct.vhost_net, %struct.vhost_net* %15, i32 0, i32 0
  store %struct.vhost_dev* %16, %struct.vhost_dev** %7, align 8
  %17 = load %struct.file*, %struct.file** %5, align 8
  %18 = getelementptr inbounds %struct.file, %struct.file* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = load i32, i32* @O_NONBLOCK, align 4
  %21 = and i32 %19, %20
  store i32 %21, i32* %8, align 4
  %22 = load %struct.vhost_dev*, %struct.vhost_dev** %7, align 8
  %23 = load %struct.iov_iter*, %struct.iov_iter** %4, align 8
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @vhost_chr_read_iter(%struct.vhost_dev* %22, %struct.iov_iter* %23, i32 %24)
  ret i32 %25
}

declare dso_local i32 @vhost_chr_read_iter(%struct.vhost_dev*, %struct.iov_iter*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
